server now works

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -37,7 +37,7 @@
 
 <!--Output Div-->
 <div id="outputDiv"> 
-    <h3>output</h3>
+    <h3>12</h3>
 </div>
 <br>
 <br>
@@ -49,7 +49,7 @@
 </div>
 
 
-
+<!--scripts-->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="scripts/client.js"></script>
 </body>
