added some logic to hopefully do a calculation but still lost on where to put it all and also how to get the client to listen to the buttons pushed

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -26,7 +26,7 @@
         <!--Second Number-->
         <input type="number" id="secondNumber">
         <!--Equals (submit everything)-->
-        <button id="submitButton" onclick="calculation(event)">=</button>
+        <button id="submitButton" onclick="getCalculation(event)">=</button>
         <!--Clear button-->
         <button id="clearButton" onclick="clearForm(event)">C</button>
     </form>
