--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,17 +12,17 @@
     <br>
     <br>
 <div id="formDiv">
-    <form onsubmit="getCalculation(event)">   
+    <form onsubmit="submitForm(event)">   
         <!--First Number Form-->
         <input type="number" id="firstNumber">
         <!--Addition Button-->
-        <button id="additionButton">+</button>
+        <button id="additionButton" onclick="operator(event)" value="+">+</button>
         <!--Subtraction Button-->
-        <button id="subtractionButton">-</button>
+        <button id="subtractionButton" onclick="operator(event)" value="-">-</button>
         <!--Multiplication Button-->
-        <button id="multiplicationButton">X</button>
+        <button id="multiplicationButton" onclick="operator(event)" value="X">X</button>
         <!--Division Button-->
-        <button id="divisionButton">/</button>
+        <button id="divisionButton" onclick="operator(event)" value="/">/</button>
         <!--Second Number-->
         <input type="number" id="secondNumber">
         <!--Equals (submit everything)-->
