--- a/server/public/index.html
+++ b/server/public/index.html
@@ -12,7 +12,7 @@
     <br>
     <br>
 <div id="formDiv">
-    <form onsubmit="submitForm(event)">   
+    <form onSubmit="submitForm(event)">   
         <!--First Number Form-->
         <input type="number" id="firstNumber">
         <!--Addition Button-->
