getting closer but not quite

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,13 +16,13 @@
         <!--First Number Form-->
         <input type="number" id="firstNumber">
         <!--Addition Button-->
-        <button id="additionButton" onclick="operator(event)" value="+">+</button>
+        <button id="additionButton" onclick="operator()" value="+">+</button>
         <!--Subtraction Button-->
-        <button id="subtractionButton" onclick="operator(event)" value="-">-</button>
+        <button id="subtractionButton" onclick="operator()" value="-">-</button>
         <!--Multiplication Button-->
-        <button id="multiplicationButton" onclick="operator(event)" value="X">X</button>
+        <button id="multiplicationButton" onclick="operator()" value="X">X</button>
         <!--Division Button-->
-        <button id="divisionButton" onclick="operator(event)" value="/">/</button>
+        <button id="divisionButton" onclick="operator()" value="/">/</button>
         <!--Second Number-->
         <input type="number" id="secondNumber">
         <!--Equals (submit everything)-->
