I have redone everything and now it is doing everything but pushing the result to the DOM

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -25,7 +25,7 @@
         <!--Second Number-->
         <input type="number" id="secondNumber">
         <!--Equals (submit everything)-->
-        <button type="submit" id="submitButton" onclick="submitForm(event)">=</button>
+        <button type="submit" id="submitButton" onclick="onSubmit(event)">=</button>
         <!--Clear button-->
         <button id="clearButton">C</button>
 </div>
